# EquityAlchemy

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE_REFACTORING_SUMMARY.md  A_test.csv  ERD.drawio  Map from Fundamental Accounting Concepts to XBRL Taxonomy Concepts.html  README.md  README_minimize_filings.md  Untitled-1.txt  analyze_company_data_completeness.py  backend.py  debug_db_config.py  domainModeling.ipynb  example_hashtag_usage.js  filing_urls.csv  fly.toml  income_statement.csv  model.py  pyproject.toml  repository.py  requirements.txt  requirements_prod.txt  run_webapp_locally.ps1  run_webapp_locally.sh  service.py  start_dev.ps1  test_backend.py  test_minimize_filings.py  test_quarter_mapping.py  test_service.py  testbrel.py  tests.py  upload-env.ps1  websocket_requirements.txt
backend/: Dockerfile  all_companies_available.csv  filing_listener.py  filing_urls.csv  fly.listener.toml  fly.toml  requirements-raw.txt  requirements.txt  requirements_prod.txt  supplement_balance_sheets.py
docs/: BUGS.md  DATABASE_README.md  FLY_DEPLOYMENT.md  IDEAS.md  README.md  STOCK_PRICING_IMPLEMENTATION.md  TODO.MD  commands.md
frontend/: Dockerfile  fly.toml  package.json
notebooks/: filing_urls.csv  test_price_endpoint.py
test_data/: AAPL_10K_20241101_data.json
tests/: __init__.py  analyze_company_data_completeness.py  test_all.py  test_architecture_refactoring.py  test_backend.py  test_consolidated_quarterly_periods.py  test_data_completeness.py  test_data_fetching.py  test_financial_statements_persistence.py  test_metric_standardization.py  (+5 more)
(+51 files in other folders)
